--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.9.1",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
@@ -28,7 +29,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
+    "typescript-eslint": "^7.3.1",
     "vite": "^6.3.5"
   }
 }
